Testing image scale

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html><html><head><title>GONOGO</title>  
 <style media="screen" type="text/css">
 #jspsych-categorize-stimulus {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
 </style><script src='js/jquery.js'></script>             <script src='js/jspsych/jspsych.js'></script>             <script src='js/jspsych/plugins/jspsych-single-stim.js'></script>             <script src='js/jspsych/plugins/jspsych-categorize.js'></script>             <script src='js/jspsych/plugins/jspsych-text.js'></script>             <script src='js/jspsych/plugins/jspsych-instructions.js'></script>             <script>var pagesArray = [];
 var stim1 = { image: 'assets/bigbig.jpg',data: { GO_NOGO: 'Go', Congruent: 'Yes' } };
