--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@ var Trials_test_block = {type: 'categorize',stimuli: stimTrialsImages,key_answer
 var Submit_introduction_block = { type: 'text', text: 'BYE' };
 var blocks = [Introduction_introduction_block, Practice_introduction_block, Practice_test_block, Trials_introduction_block, Trials_test_block, Submit_introduction_block];</script><link href='js/jspsych/css/jspsych.css' rel='stylesheet' type='text/css'></link>    
 <style media="screen" type="text/css">
-#jspsych-categorize-stimulus {
-    height: 955px;
-}
 .jspsych-display-element {
-    width: 1720px;
     margin: 75px auto 0px auto; /*top right bottom left*/
     text-align: center;
 }
-</style>       </head><body id='body' ><div id='textBox' class='jspsych-display-element'></div></body><script>var images = ['assets/bigbig.jpg','assets/bigsmall.jpg'];
+</style>
+<script>
+$(function(){
+    $('#jspsych-categorize-stimulus').css({ height: $(window).innerHeight() });
+    $('.jspsych-display-element').css({ width: $(window).innerWidth() });
+});</script></head><body id='body' ><div id='textBox' class='jspsych-display-element'></div></body><script>var images = ['assets/bigbig.jpg','assets/bigsmall.jpg'];
 var audio = [];var i = 0;         var a, d, z, j;         if (audio.length > 0) {             document.getElementById("body").innerHTML += '<audio id="a0" preload="auto" hidden><source src="' + audio[0] + '"></audio>';             var myInterval = window.setInterval(loadAudio, 200);             var audioContainer = document.createElement('div');         }         else {            onAudioLoad();         }         function loadAudio() {             a = document.getElementById('a' + i);             d = a.duration;             try {                 z = a.buffered.end(0);             } catch (e) {}             document.getElementById('textBox').innerHTML = '' + i + ' of ' + audio.length + ' audio files loaded.';             if ((z === d && z !== undefined) || (z > 50)) {                 i += 1;                 z = 0;                 if (i < audio.length) {                     document.getElementById("body").innerHTML += '<audio id="a' + i + '" preload="auto" hidden><source src="' + audio[i] + '"></audio>';                 }                 else if (i === audio.length) {                     window.clearInterval(myInterval);                     for (j = 0; j < audio.length; j += 1) {                         audioContainer.appendChild(document.getElementById('a' + j));                     }                     onAudioLoad();                 }             }         }         function onAudioLoad() {             jsPsych.preloadImages(images, function(){ startExperiment(); },             function(nLoaded) { updateLoadedCount(nLoaded); });             function updateLoadedCount(nLoaded){    document.getElementById('textBox').innerHTML = '' + nLoaded + ' of ' + images.length + ' image files loaded.';            }             function startExperiment() {                 jsPsych.init({         experiment_structure: blocks,         on_finish: function() {                   jsPsych.data.displayData();         }     });             }         }     </script> </html>
