Some small fixes

--- a/tasks/stroop/index.html
+++ b/tasks/stroop/index.html
@@ -23,13 +23,13 @@ var Trials_test_block = {type: 'single-stim',stimuli: stimTrialsImages,data: sti
 var Submit_introduction_block = { type: 'text', text: 'THE END. (no audio).' };
 var blocks = [Introduction_introduction_block, Example_introduction_block, Example_test_block, Practice_introduction_block, Practice_test_block, Trials_introduction_block, Trials_test_block, Submit_introduction_block];</script><link href='js/jspsych/css/jspsych.css' rel='stylesheet' type='text/css'></link>     </head><body id='body' >
 <audio id="a0" preload="auto" hidden>
-    <source src="assets/intro-stroop-15750.wav">
+    <source src="assets/intro-stroop-15750.mp3">
 </audio>
 <div id='textBox' class='jspsych-display-element'></div>
 </body>
 
 <script>
-    var audio = ['assets/intro-stroop-15750.wav','assets/too-slow.wav','assets/well-done.wav','assets/example.wav','assets/practise-animals-13500.wav','assets/start-properly-8750.wav', 'assets/wrong-button.wav'];
+    var audio = ['assets/intro-stroop-15750.mp3','assets/too-slow.mp3','assets/well-done.mp3','assets/example.mp3','assets/practise-animals-13500.mp3','assets/start-properly-8750.mp3', 'assets/wrong-button.mp3'];
     var images = ['assets/small-smiley-face.png','assets/small-unhappy-face.png','assets/bigbig.jpg', 'assets/bigsmall.jpg','assets/unhappy-face.png', 'assets/Bsmallsmall.jpg', 'assets/smallbig.jpg', 'assets/smallBsmall.jpg'];
     
     var i = 0;
